Fix alignment on large screens.

--- a/app/common/icons/icons.styl
+++ b/app/common/icons/icons.styl
@@ -5,11 +5,9 @@ json("theme.json")
   flex-flow column wrap-reverse
   position absolute
   right 0
-  bottom 0
   top 0
-  left 0
   align-items flex-end
-  max-height 68vh
+  max-height 43vh
   align-content flex-start
   margin 10px
 
